@@ -35,6 +35,8 @@ Current git version
   * New command 'attr_type' printing the type of a given attribute.
   * Relative values for integer attributes ('+=N' and '-=N')
   * The 'cycle' command now also cycles through floating windows.
+  * The 'rule' command now reports errors already during rule creation.
+  * In rule consequences, 'toggle' is not allowed anymore.
   * The python bindings automatically convert from and to python's types
   * Bug fixes:
     - Fix mistakenly transparent borders of argb clients
